force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/Drive_Delivery_Shipment_Config__mdt.object-meta.xml
<CustomObject>
    <label>Drive Delivery Shipment Config</label>
    <pluralLabel>Drive Delivery Shipment Configs</pluralLabel>
</CustomObject>