force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Arrive_End_Time_Offset__c.field-meta.xml
<CustomField>
    <fullName>Arrive_End_Time_Offset__c</fullName>
    <label>Arrive End Time Offset</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>