force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Need for TMS Integration API Header Param</description>
    <label>Content Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>