force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Depart_End_Time_Offset__c.field-meta.xml
<CustomField>
    <fullName>Depart_End_Time_Offset__c</fullName>
    <label>Depart End Time Offset</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>