force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Enterprise_Name__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Name__c</fullName>
    <description>Need for TMS Integration JSON for multiple notes</description>
    <label>Enterprise Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>