force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Freight_Controlled_By_System__c.field-meta.xml
<CustomField>
    <fullName>Freight_Controlled_By_System__c</fullName>
    <label>Freight Controlled By System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>