force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <label>Freight Terms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>