force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Inbound_Interface__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Interface__c</fullName>
    <description>Need for TMS Integration API Header Param</description>
    <label>Inbound Interface</label>
    <length>40</length>
    <type>Text</type>
</CustomField>