force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Inbound_Interface_Version__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Interface_Version__c</fullName>
    <description>Need for TMS Integration API Header Param</description>
    <label>Inbound Interface Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>