force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>