force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Load_Type__c.field-meta.xml
<CustomField>
    <fullName>Load_Type__c</fullName>
    <label>Load Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>