force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Non_Catalogued_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_Catalogued_Item_Name__c</fullName>
    <label>Non Catalogued Item Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>