force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Prepopulate_Arrive_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Prepopulate_Arrive_End_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepopulate Arrive End Time</label>
    <type>Checkbox</type>
</CustomField>