force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Prepopulate_Depart_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Prepopulate_Depart_End_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepopulate Depart End Time</label>
    <type>Checkbox</type>
</CustomField>