force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Quantity_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit_Of_Measure__c</fullName>
    <label>Quantity Unit Of Measure</label>
    <length>20</length>
    <type>Text</type>
</CustomField>