force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>Need for TMS Integration API Header Param</description>
    <label>Queue Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>