force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Retry_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Retry_Threshold__c</fullName>
    <label>Retry Threshold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>