force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <description>Need for TMS Integration API Header Param. This value will be environment specific.</description>
    <label>Sender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>