force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <label>Service Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>