force-app/main/default/objects/Drive_Delivery_Shipment_Config__mdt/fields/Shipment_Line_Qty_UOM__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Line_Qty_UOM__c</fullName>
    <label>Shipment Line Qty UOM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>